# app/Http/Controllers/LabelController.php
@@ -4,63 +4,60 @@ namespace App\Http\Controllers;
 
 use App\Http\Requests\StoreLabelRequest;
 use App\Http\Requests\UpdateLabelRequest;
+use App\Http\Resources\LabelCollection;
+use App\Http\Resources\LabelResource;
 use App\Models\Label;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Response;
 
 class LabelController extends Controller
 {
-    /**
-     * Display a listing of the resource.
-     */
-    public function index()
+    public function index(): JsonResponse
     {
-        //
+        $labels = Label::all();
+
+        return response()
+            ->json(new LabelCollection($labels), Response::HTTP_OK);
     }
 
-    /**
-     * Show the form for creating a new resource.
-     */
-    public function create()
+    public function store(StoreLabelRequest $request): JsonResponse
     {
-        //
+        $this->authorize('store', Label::class);
+
+        $label = Label::create($request->validated());
+
+        return response()
+            ->json(new LabelResource($label), Response::HTTP_CREATED);
     }
 
-    /**
-     * Store a newly created resource in storage.
-     */
-    public function store(StoreLabelRequest $request)
+    public function show(Label $label): JsonResponse
     {
-        //
+        return response()
+            ->json(new LabelResource($label), Response::HTTP_OK);
     }
 
-    /**
-     * Display the specified resource.
-     */
-    public function show(Label $label)
+    public function update(UpdateLabelRequest $request, Label $label): JsonResponse
     {
-        //
+        $this->authorize('update', $label);
+
+        $label->update($request->validated());
+
+        return response()
+            ->json(new LabelResource($label), Response::HTTP_OK);
     }
 
-    /**
-     * Show the form for editing the specified resource.
-     */
-    public function edit(Label $label)
+    public function destroy(Label $label): JsonResponse
     {
-        //
-    }
+        $this->authorize('destroy', $label);
 
-    /**
-     * Update the specified resource in storage.
-     */
-    public function update(UpdateLabelRequest $request, Label $label)
-    {
-        //
-    }
+        try {
+            $label->delete();
+        } catch (\Throwable $th) {
+            return response()
+                ->json(['message' => $th->getMessage()], Response::HTTP_CONFLICT);
+        }
 
-    /**
-     * Remove the specified resource from storage.
-     */
-    public function destroy(Label $label)
-    {
-        //
+        return response()
+            ->json(null, Response::HTTP_NO_CONTENT);
     }
 }
