# docs/api.yaml
@@ -45,6 +45,114 @@ paths:
           description: Logout
       security:
         - BearerAuth: []
+  /api/labels:
+    get:
+      tags:
+        - Labels
+      summary: Get all labels
+      responses:
+        '200':
+          description: A list of labels
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Label'
+    post:
+      tags:
+        - Labels
+      summary: Create a new label
+      security:
+          - BearerAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Label'
+      responses:
+        '201':
+          description: Label created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Label'
+        '422':
+          description: Unprocessable entity/content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+  /api/labels/{id}:
+    get:
+      tags:
+        - Labels
+      summary: Get a label by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the label
+      responses:
+        '200':
+          description: A label
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Label'
+        '404':
+          description: Label not found
+    patch:
+      tags:
+        - Labels
+      summary: Update a label by ID
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the label
+      responses:
+        '200':
+          description: Label resource updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Label'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Label'
+    delete:
+      tags:
+        - Labels
+      summary: Delete a label by ID
+      security:
+        - BearerAuth: [ ]
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+          description: The ID of the label
+      responses:
+        '204':
+          description: Label resource deleted
+        '409':
+          description: Conflict
   /api/categories:
     get:
       tags:
@@ -426,6 +534,28 @@ paths:
           description: Method not allowed
 components:
   schemas:
+    Label:
+      type: object
+      description: A label
+      deprecated: false
+      properties:
+        id:
+          readOnly: true
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: "Label name"
+        created_at:
+          readOnly: true
+          type: string
+          format: date-time
+          example: "2024-02-10T18:58:30.000000Z"
+        updated_at:
+          readOnly: true
+          type: string
+          format: date-time
+          example: "2024-02-10T18:58:30.000000Z"
     Category:
       type: object
       description: A category
