# routes/api.php
@@ -3,6 +3,7 @@
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\CommentController;
+use App\Http\Controllers\LabelController;
 use App\Http\Controllers\PostController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -25,6 +26,13 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::post('/login', [AuthController::class, 'logIn']);
 Route::post('/logout', [AuthController::class, 'logOut'])
     ->middleware('auth:sanctum');
+
+Route::apiResource('/labels', LabelController::class)
+    ->only('index', 'show');
+Route::middleware('auth:sanctum')->group(function () {
+    Route::apiResource('/labels', LabelController::class)
+        ->only('store', 'update', 'destroy');
+});
 
 Route::apiResource('/categories', CategoryController::class)
     ->only('index', 'show');
